--- a/tck/pax-cdi-tck11-runner/src/test/resources/META-INF/cdi-tck.properties
+++ b/tck/pax-cdi-tck11-runner/src/test/resources/META-INF/cdi-tck.properties
@@ -1,9 +1,14 @@
 # CDI TCK configuration to run test from IDE
 # Alter the path accordingly (absolute or relative from the tck/impl dir)
-org.jboss.cdi.tck.libraryDirectory=target/dependency/lib/
+org.jboss.cdi.tck.libraryDirectory=${basedir}/target/dependency/lib/
 # JNDI DS
 org.jboss.cdi.tck.testDataSource=java:jboss/datasources/ExampleDS
 # JNDI JMS
 org.jboss.cdi.tck.testJmsConnectionFactory=java:/ConnectionFactory
 org.jboss.cdi.tck.testJmsQueue=java:/queue/test
 org.jboss.cdi.tck.testJmsTopic=java:/topic/test
+
+# porting package implementation classes
+org.jboss.cdi.tck.spi.Beans = org.ops4j.pax.cdi.tck.porting.owb.BeansImpl
+org.jboss.cdi.tck.spi.Contexts = org.ops4j.pax.cdi.tck.porting.owb.ContextsImpl
+org.jboss.cdi.tck.spi.EL = org.ops4j.pax.cdi.tck.porting.owb.ELImpl
