[PAXCDI-19] prepare Arquillian adapter for alternative CDI providers
Factored out test helpers into pax-cdi-test-support

--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -40,6 +40,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.ops4j.pax.cdi</groupId>
+            <artifactId>pax-cdi-test-support</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.ops4j.pax.cdi.samples</groupId>
