--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -372,7 +372,7 @@
                 <dependency>
                     <groupId>org.jboss.weld</groupId>
                     <artifactId>weld-osgi-bundle</artifactId>
-                    <version>2.1.0.Beta2</version>
+                    <version>${weld2.version}</version>
                     <scope>provided</scope>
                 </dependency>
             
