--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -19,7 +19,7 @@
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.2.0</openwebbeans.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
-        <pax.exam.version>3.3.0-SNAPSHOT</pax.exam.version>
+        <pax.exam.version>3.3.0</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
         <pax.jpa.version>0.1.0</pax.jpa.version>
         <pax.swissbox.version>1.7.0</pax.swissbox.version>
