Use version 1.0.0 for the org.osgi.service.cdi package

--- a/pax-cdi-api/pom.xml
+++ b/pax-cdi-api/pom.xml
@@ -57,6 +57,14 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                        <Export-Package>
+                            org.ops4j.pax.cdi.api.*;version=${project.version},
+                            org.osgi.service.cdi
+                        </Export-Package>
+                        <Import-Package>
+                            org.osgi.service.cdi,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
