[PAXCDI-23] updated JPA sample artifact name

--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -34,7 +34,7 @@
 
         <dependency>
             <groupId>org.ops4j.pax.jpa.samples</groupId>
-            <artifactId>pax-jpa-sample1-model</artifactId>
+            <artifactId>pax-jpa-sample1</artifactId>
             <version>${pax.jpa.version}</version>
         </dependency>
 
