--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -14,7 +14,7 @@
     <name>OPS4J Pax CDI Parent POM</name>
 
     <properties>
-        <deltaspike.version>0.5-SNAPSHOT</deltaspike.version>
+        <deltaspike.version>0.5</deltaspike.version>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.2.0</openwebbeans.version>
