[PAXCDI-23] removed @Transactional annotation from EntityManager producer

--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -16,17 +16,10 @@
         <module>pax-cdi-sample1-client</module>
         <module>pax-cdi-sample1-web</module>
         <module>pax-cdi-jetty-weld-war</module>
+        <module>pax-cdi-sample2-service</module>
+        <module>pax-cdi-sample2-ds-jpa</module>
         <module>pax-cdi-sample3</module>
         <module>pax-cdi-sample3-client</module>
-        <module>pax-cdi-sample2-deltaspike</module>
     </modules>
 
-    <profiles>
-        <profile>
-            <id>experimental</id>
-            <modules>
-                <module>pax-cdi-sample2-service</module>
-            </modules>
-        </profile>
-    </profiles>
 </project>
