[PAXCDI-68] Make Pax Web HTTP port configurable

--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -254,7 +254,8 @@
                     <runOrder>alphabetical</runOrder>
                     <systemPropertyVariables>
                         <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
-                        <pax.cdi.provider>${pax.cdi.provider}</pax.cdi.provider>
+                        <http.port>${http.port}</http.port>
+                        <pax.cdi.provider>${pax.cdi.provider}</pax.cdi.provider>                        
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
