--- a/tck/pax-cdi-tck11-runner/pom.xml
+++ b/tck/pax-cdi-tck11-runner/pom.xml
@@ -10,6 +10,8 @@
     <groupId>org.ops4j.pax.cdi.tck</groupId>
     <artifactId>pax-cdi-tck11-runner</artifactId>
 
+    <name>OPS4J Pax CDI TCK 1.1 Runner</name>
+
     <dependencies>
 
         <dependency>
