--- a/tck/pax-cdi-arquillian/pom.xml
+++ b/tck/pax-cdi-arquillian/pom.xml
@@ -9,6 +9,8 @@
 
 	<groupId>org.ops4j.pax.cdi.tck</groupId>
 	<artifactId>pax-cdi-arquillian</artifactId>
+    
+    <name>OPS4J Pax CDI TCK Arquillian Adapter</name>
 
 	<dependencies>
 
