--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>pax-cdi-web-openwebbeans</module>
         <module>pax-cdi-features</module>
         <module>pax-cdi-test-support</module>
+        <module>pax-cdi-fragment</module>
     </modules>
 
     <profiles>
