--- a/pax-cdi-fragment/pom.xml
+++ b/pax-cdi-fragment/pom.xml
@@ -5,9 +5,13 @@
     <artifactId>cdi</artifactId>
     <version>0.5.0-SNAPSHOT</version>
   </parent>
+  
   <groupId>org.ops4j.pax.cdi</groupId>
   <artifactId>pax-cdi-fragment</artifactId>
   <packaging>pom</packaging>
+  
+  <name>OPS4J Pax CDI Fragment Aggregator</name>
+  
   <modules>
       <module>pax-cdi-fragment-ds-jpa</module>
   </modules>
