--- a/pax-cdi-features/pom.xml
+++ b/pax-cdi-features/pom.xml
@@ -18,7 +18,7 @@
     <description>
         Pax Cdi module creating a features xml file to deploy Pax Cdi components as features in Apache Karaf.
         To use this feature enter the following in your Karaf shell -
-        features:install mvn:org.ops4j.pax.cdi/pax-cdi-features/${project.version}/xml/features
+        features:addurl mvn:org.ops4j.pax.cdi/pax-cdi-features/${project.version}/xml/features
     </description>
 
     <properties>
