--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -393,8 +393,8 @@
 
                 <dependency>
                     <groupId>org.apache.xbean</groupId>
-                    <artifactId>xbean-asm-shaded</artifactId>
-                    <version>3.13</version>
+                    <artifactId>xbean-asm4-shaded</artifactId>
+                    <version>${xbean.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
