--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -233,7 +233,7 @@
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa</artifactId>
-            <version>2.2.0</version>
+            <version>${openjpa.version}</version>
             <scope>provided</scope>
         </dependency>
 
