--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -17,6 +17,7 @@
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.2.1</openwebbeans.version>
+        <openjpa.version>2.2.0</openjpa.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>3.4.0</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
