--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.7.0-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../../../pax-cdi-parent</relativePath>
     </parent>
@@ -14,7 +14,7 @@
     <name>OPS4J Pax CDI 1.0 Integration Tests on Karaf</name>
     
     <properties>
-      <karaf.version>3.0.0-SNAPSHOT</karaf.version>
+      <karaf.version>3.0.0</karaf.version>
     </properties>
 
     <dependencies>
