--- a/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>pax-cdi-samples</artifactId>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.7.0</version>
+        <version>0.8.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     
