--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -30,7 +30,7 @@
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
         <weld.api.version>1.2.0.Beta1</weld.api.version>
         <weld.version>1.2.0.Beta1</weld.version>
-        <weld2.version>2.1.1.Final</weld2.version>
+        <weld2.version>2.2.0.SP1</weld2.version>
         <xbean.version>3.16</xbean.version>
     </properties>
 
