--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -21,7 +21,7 @@
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>3.4.0</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
-        <pax.jpa.version>0.2.0-SNAPSHOT</pax.jpa.version>
+        <pax.jpa.version>0.2.0</pax.jpa.version>
         <pax.swissbox.version>1.7.0</pax.swissbox.version>
         <pax.url.version>1.6.0</pax.url.version>
         <pax.web.version>3.0.7</pax.web.version>
