--- a/pax-cdi-jetty-osgi-boot/pom.xml
+++ b/pax-cdi-jetty-osgi-boot/pom.xml
@@ -69,6 +69,7 @@
  javax.servlet.http;version="[3.1,3.2)",
  javax.transaction;version="1.1.0";resolution:=optional,
  javax.transaction.xa;version="1.1.0";resolution:=optional,
+ org.eclipse.jetty.annotations;version="9.0.0";resolution:=optional,
  org.osgi.framework,
  org.osgi.service.cm;version="1.2.0",
  org.osgi.service.event;version="1.2.0",
