[PAXCDI-90] activate Jetty integration tests

--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -25,6 +25,7 @@
             <modules>
                 <module>src/it/itest-cdi10</module>
                 <module>src/it/itest-karaf</module>
+                <module>src/it/itest-jetty</module>
             </modules>
         </profile>
 
