--- a/pax-cdi-jetty-osgi-boot/pom.xml
+++ b/pax-cdi-jetty-osgi-boot/pom.xml
@@ -89,6 +89,13 @@
                 </configuration>
                 
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>            
         </plugins>
     </build>
 </project>
